--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -8,6 +8,7 @@ nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin: 0px 200px;
 }
 
 .nav-title {
@@ -46,4 +47,16 @@ nav a {
     font-size: 20px;
     font-weight: 700;
     padding: 18px 35px;
+}
+/* Header related styles */
+.header{
+    background-color: #FFF8F3;
+}
+.banner{
+    padding: 30px 30px 30px 150px;
+    display: flex;
+    align-items: center;
+}
+.banner img{
+    width: 500px;
 }
