--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -3,6 +3,13 @@
     font-family: "Open Sans", sans-serif;
 }
 
+.section-title {
+    color: #181818;
+    text-align: center;
+    font-size: 35px;
+    font-weight: 700;
+}
+
 /* Nav related styles */
 nav {
     display: flex;
@@ -36,7 +43,7 @@ nav a {
     color: #474747;
     font-size: 20px;
     font-weight: 400;
-    
+
 }
 
 .btn-primary {
@@ -48,15 +55,83 @@ nav a {
     font-weight: 700;
     padding: 18px 35px;
 }
+
 /* Header related styles */
-.header{
+.header {
     background-color: #FFF8F3;
+    background-image: url('../images/header_bg.png');
+    background-repeat: no-repeat;
+    background-position: bottom right;
 }
-.banner{
-    padding: 30px 30px 30px 150px;
+
+.banner {
+    padding: 30px 30px 0px 150px;
     display: flex;
     align-items: center;
+    justify-content: space-between;
 }
-.banner img{
+
+.banner-content {
+    max-width: 550px;
+    margin-left: 46px;
+}
+
+.banner img {
     width: 500px;
+}
+
+.banner-greeting {
+    color: #474747;
+    font-size: 45px;
+    margin-bottom: 0;
+}
+
+.banner-title {
+    color: #181818;
+    font-size: 85px;
+    font-weight: 700;
+    margin-top: 5px;
+    margin-bottom: 0;
+}
+
+.banner-desc {
+    margin-top: 20px;
+    margin-bottom: 0;
+}
+
+.download-btn {
+    margin-top: 30px;
+    margin-bottom: 0;
+}
+
+/* main section */
+main{
+    max-width: 1140px;
+    margin: 0 auto;
+}
+/* about section */
+.about {
+    padding: 140px;
+    border-radius: 10px;
+    background: #FFF8F3;
+    margin-top: 130px;
+}
+
+.section-desc {
+    color:  #757575;
+    text-align: center;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 30px;
+}
+.about-info-container{
+    display: flex;
+    justify-content: space-between;
+    text-align: center;
+}
+.about-info-container p{
+    font-weight: bolder;
+}
+.about-info-container h4{
+    font-weight: normal;
 }
